# shoot-ai

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CHANGELOG.md  Dockerfile  EXECUTION_PLAN.md  France vs Sweden_match_transcript.txt  ITERATION_LOG.md  KawkabAI.spec  LICENSE  PLAN.md  PROFESSIONAL_AUDIT.md  README.md  REVIEW.md  STATUS.md  build_dmg.sh  build_release.py  docker-compose.yml  installer.iss  kawkab-ai-review.md  kawkab_github_repos.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
.opencode/plans/: A1_PlayerStats_fix.md  sprint1_implementation.md  sprint7_11_roadmap.md
.opencode/skills/graphify/: SKILL.md
docs/: API.md  CYCLE_1_VIDEO_PIPELINE.md  DATA_CARD.md  INDEX.md  MODEL_CARD.md  PositioningService.md  README.md  RealtimeService.md  WorkloadService.md  architecture.md  getting-started.md  model-cards.md
docs/api/: auth.md  cloud.md  v1.md
docs/deploy/: config.md  docker.md  production.md
docs/dev/: contributing.md  tests.md
docs/providers/: opta.md  statsbomb.md
docs/services/: data-import.md  monitoring.md  realtime.md  webhooks.md
docs/translations/: ar.yml
infrastructure/: nginx.conf  setup.iss
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml
locales/: ar.json  ar.po  en.json  en.po
mobile/: App.js  app.json  package.json
mobile/src/: api.js  db.js
mobile/src/screens/: LoginScreen.js  MatchesScreen.js  ScoutScreen.js  SyncScreen.js
scripts/: accuracy_audit.py  assess_plan.py  benchmark_tracking.py  build-frontend.js  bundle-js.mjs  compile_i18n.py  copy_user_video.py  deploy.sh  detect_events.py  download_ground_truth.py  end_to_end_test.py  evaluate_tracking.py  extract_highlights.py  fine_tune_yolo.py  generate_synthetic_video.py  manual_annotate.py  parse_transcript_names.py  phase2_test.py  phase3_test.py  quick_llm_test.py  real_video_eval.py  regression_test.py  render_tracking_overlay.py  run_checklist.py  run_full_match.py  segment_match.py  setup.py  smoke_test_cv.py  smoke_test_llm.py  synthetic_benchmark.py  test_full_match.py  test_homography.py  test_llm_guardrails.py  test_oauth_flow.py  test_quick.py  test_top_n_filter.py  test_tracking_v2.py  test_transcribe.py  test_user_video.py  train_jersey_cnn.py  (+4 more)
src/kawkab/: __init__.py  __main__.py  app.py
src/kawkab/api/: api_v1.py  client.py  models.py
src/kawkab/cloud/: __init__.py  auth.py  database.py  middleware.py  models.py  oauth.py  server.py
src/kawkab/core/: __init__.py  ball_physics_pitch_control.py  ball_recovery.py  benchmarks.py  box_entries.py  build_up.py  calibration.py  carry_xt.py  confidence_intervals.py  config.py  coordinate_validator.py  coords.py  corner_xg.py  crossing_analysis.py  crossing_xg.py  database_sharding.py  defensive_actions.py  defensive_xt.py  dl_xg_model.py  dominance_index.py  duel_analysis.py  encryption.py  epv.py  event_schema.py  events.py  expected_pass.py  export_converters.py  fatigue_model.py  finishing_analysis.py  fixture_difficulty.py  flank_analysis.py  form_analysis.py  formation_analysis.py  formation_effectiveness.py  game_constants.py  game_plan.py  game_state.py  goals_added.py  gpu_acceleration.py  heatmap.py  (+80 more)
src/kawkab/i18n/: arabic_glossary.py
src/kawkab/migrations/: 001_initial.sql  002_add_professional_tables.sql  003_add_benchmark_table.sql  004_add_validation_table.sql  005_add_batch_table.sql  006_add_feedback_tables.sql  007_add_video_clips.sql  008_add_face_embedding.sql  009_add_football_data.sql  010_add_external_sources.sql  011_add_apifootball.sql  012_add_indexes.sql  013_add_audit_events.sql  014_add_weather_and_cards.sql  015_add_event_dedup.sql  016_add_shortlist.sql  017_add_contracts.sql  018_add_coding_tags.sql  019_collab_users.sql  020_add_wearable_sessions.sql  021_add_medical_tracking.sql  022_professional_consolidation.sql  023_add_missing_indexes.sql  024_add_soft_delete.sql  025_add_composite_indexes.sql
src/kawkab/plugins/: __init__.py  manager.py
src/kawkab/services/: __init__.py  advanced_event_detection_service.py  ai_assistant_v2_service.py  analysis_service.py  anomaly_detection_service.py  api_football_service.py  audio_service.py  audit_service.py  auto_updater_service.py  ball_tracker.py  batch_service.py  benchmark_service.py  bzzoiro_service.py  camera_cut_detector.py  card_detection_service.py  clip_extraction_service.py  clip_service.py  cloud_sync_service.py  coach_validation_service.py  collaboration_service.py  concussion_protocol.py  contract_tracker.py  cross_match_linking_service.py  cv_service.py  cv_service_v2.py  data_export_service.py  data_import_service.py  data_provider_base.py  feedback_service.py  (+86 more)
tests/: conftest.py  test_load.py
tests/e2e/: conftest.py  test_e2e_full_pipeline.py  test_e2e_pipeline.py  test_e2e_video_pipeline.py  test_pipeline_e2e.py  test_tracking_e2e.py
tests/integration/: test_bridge_advanced_metrics.py  test_bridge_feedback.py  test_full_pipeline.py
tests/unit/: test_advanced_event_detection_service.py  test_analysis_service.py  test_analysis_service_extensions.py  test_analysis_service_modules.py  test_analysis_service_xg_xt.py  test_anomaly_detection.py  test_api_external_services.py  test_api_services.py  test_api_v1.py  test_arabic_glossary.py  test_audio_service.py  test_audit_service.py  test_ball_physics_pitch_control.py  test_ball_recovery.py  test_batch_service.py  test_benchmark_service.py  test_benchmarks.py  test_benchmarks_performance.py  test_box_entries.py  test_bridge_handlers.py  test_build_up.py  test_calibration.py  test_calibration_v2.py  test_card_detection_service.py  test_carry_xt.py  test_clip_extraction_service.py  test_clip_service.py  test_coding_handler.py  test_confidence_intervals.py  test_config.py  test_contract_tracker.py  test_coordinate_validator.py  test_coords.py  test_core_events.py  test_core_missing.py  test_corner_xg.py  test_cross_match_linking_service.py  test_crossing_analysis.py  test_cv_service.py  test_cv_service_model_manager.py  (+178 more)
tools/: train_xt_model.py  validate_xg_models.py
(+160 files in other folders)
