[project]
name = "kawkab-ai"
version = "0.12.0"
description = "AI Football Coach for Amateur Teams - Local, Private, Free"
authors = [{ name = "Kawkab AI" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["football", "soccer", "ai", "coach", "tactics", "video-analysis", "yolo", "computer-vision"]

dependencies = [
    "PySide6>=6.6.0",
    "qasync>=0.27.1",
    "ultralytics>=8.4.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "loguru>=0.7.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    "ffmpeg-python>=0.2.0",
    "mplsoccer>=1.4.0",
    "kloppy>=3.12.0",
    "networkx>=3.2.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.2.0",
    "tqdm>=4.66.0",
    "lap>=0.4.0",
"soccerplots>=1.0.0",
    "easyocr>=1.7.0",
    "onnx<1.19",
    "norfair>=2.3.0",
    "motmetrics>=1.4.0",
    "EasySoccerData>=0.0.8",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.2.0",
]
reid = [
    "boxmot>=19.0.0,<22",
    "soccernet-tracklab>=1.0.0",
]
enhancement = []
cloud = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]
audio = [
    "faster-whisper>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
tactical = [
    "socceraction>=1.5.0",
]
pose = [
    "sports2d>=0.5.0",
]
graph = [
    "networkx>=3.2.0",
    "python-louvain>=0.16",
]
dev = [
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "typeguard>=4.0.0",
]
build = [
    "pyinstaller>=6.3.0",
    "pyinstaller-hooks-contrib>=2024.1",
    "nuitka>=2.0.0",
]
lightglue = [
    "onnxruntime-gpu>=1.27.0",
]
face = [
    "insightface>=1.0.1",
]
sports = [
    "supervision>=0.18.0",
    "sports @ git+https://github.com/roboflow/sports.git",
]

[project.urls]
Homepage = "https://github.com/yourusername/kawkab-ai"
Repository = "https://github.com/yourusername/kawkab-ai"
Issues = "https://github.com/yourusername/kawkab-ai/issues"

[project.scripts]
kawkab = "kawkab.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kawkab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Per-file overrides for files that legitimately need looser typing
[[tool.mypy.overrides]]
module = "kawkab.services.cv_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kawkab.services.analysis_service"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kawkab.utils.*"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "kawkab.i18n.*"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "kawkab.services.positioning_service",
  "kawkab.services.player_development_service",
  "kawkab.services.workload_service",
  "kawkab.services.scouting_service",
  "kawkab.services.video_review_service",
  "kawkab.services.pitch_detector",
  "kawkab.services.periodization_service",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may require external deps)",
    "slow: Slow tests (>5s)",
    "requires_ultralytics: Requires ultralytics package",
    "requires_cuda: Requires CUDA GPU",
    "requires_models: Requires downloaded ML model weights",
]

[tool.coverage.run]
source = ["src/kawkab"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if __debug__:",
    "logger\\.(debug|info|warning|error)",
    "return",
    "\\.\\.\\.",
]
show_missing = true
precision = 2
fail_under = 30
